# flitzis-looper

./: .gitignore  AGENTS.md  README.md  exception_mode.py  flitzis_looper.py  opencode.jsonc  pyproject.toml  ruff_defaults.toml
docs/: README.md  architecture.md  audio-engine.md  audio-loop-source-stem-alignment.md  audio-performance-architecture-audit.md  audio-state-ownership.md  comprehensive-analysis.md  development-guide.md  development.md  dsp-fx-foundation-plan.md  index.md  input-mapping-dsp-parameter-policy.md  key-lock-backend.md  message-passing.md  optimizations.md  project-overview.md  project-scan-report.json  source-tree-analysis.md  stem-generation-setup.md  technology-stack.md  time-stretch-and-pitch-shift.md  todos-legacy-migration.md  todos-optimizations.md  todos.md  ui-toolkit.md
docs/research/: audio-backends.md  index.md  ui-toolkit-migration.md
flitzis_looper/: __init__.py  __main__.py
flitzis_looper/audio/: __init__.py  bpm.py  engine.py  loop.py  pitch.py  server.py  stems_engine.py  stems_separation.py
flitzis_looper/core/: __init__.py  app.py  banks.py  bpm_control.py  callbacks.py  config.py  loops.py  state.py  stems_control.py  volume_control.py
flitzis_looper/ui/: __init__.py  context_menu.py  loop_grid.py  main_window.py  stems_panel.py  toolbar.py
flitzis_looper/ui/dialogs/: __init__.py  bpm_dialog.py  volume.py  waveform.py
flitzis_looper/ui/widgets/: __init__.py  eq_knob.py  loop_grid.py  stems_panel.py  toolbar.py  vu_meter.py
flitzis_looper/utils/: __init__.py  logging.py  math.py  paths.py  threading.py
openspec/: config.yaml  project.md
openspec-archive/restore-db-display/: tasks.md
openspec/changes/add-64th-grid-snapping/: tasks.md
openspec/changes/add-audio-file-playback/: design.md  proposal.md  tasks.md
openspec/changes/add-dearpygui-ui-shell/: design.md  tasks.md
openspec/changes/add-global-speed-control/: proposal.md  tasks.md
openspec/changes/add-low-jitter-input-mapping/: design.md  proposal.md  tasks.md
openspec/changes/add-multi-loop-mode/: design.md  tasks.md
openspec/changes/add-offline-stem-cache/: design.md  proposal.md  tasks.md
openspec/changes/add-pad-loop-playback/: design.md  proposal.md  tasks.md
openspec/changes/add-pad-manual-bpm/: tasks.md
openspec/changes/add-per-pad-key-lock/: design.md  proposal.md  tasks.md
openspec/changes/add-per-pad-mixing-metering-eq/: proposal.md  tasks.md
openspec/changes/add-performance-pad-interactions/: design.md  tasks.md
openspec/changes/add-performance-ui-grid/: design.md  proposal.md  tasks.md
openspec/changes/add-phase-aware-playback-sync/: design.md  proposal.md  tasks.md
openspec/changes/add-portable-project-persistence/: tasks.md
openspec/changes/add-real-time-time-stretch-pitch-shift/: design.md  proposal.md  tasks.md
rust/: Cargo.toml  README.md  build.rs
rust/src/: audio_engine.rs  lib.rs  messages.rs
rust/src/audio_engine/: analysis.rs  audio_stream.rs  buffer_retirement.rs  channels.rs  constants.rs  dsp.rs  eq3.rs  errors.rs  input_mapping.rs  mixer.rs  mod.rs  progress.rs  rubberband_backend.rs  sample_loader.rs  scheduler.rs  stem_cache.rs  stretch_processor.rs  transport.rs  voice.rs  voice_slot.rs
samples/: flitzis_looper.config.json
scripts/: run-rust-tests.ps1
src/flitzis_looper/: __main__.py  app.py  audio_eq.py  audio_gain.py  constants.py  controller.py  models.py  persistence.py  state.py  ui.py
src/flitzis_looper_audio/: __init__.py  __init__.pyi
src/flitzis_looper_rs/: __init__.py  __init__.pyi
src/tests/: conftest.py  test_all.py  test_smoke.py
tests/: README.md  conftest.py
tests/test_utils/: test_math.py
(+453 files in other folders)
