[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "flitzis-looper"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["imgui-bundle>=1.92.5", "pydantic>=2.12.5"]

[dependency-groups]
dev = [
    "maturin>=1.10.2; platform_system == 'Windows'",
    "maturin[patchelf]>=1.10.2; platform_system != 'Windows'",
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[tool.ruff]
extend = "ruff_defaults.toml"

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
disallow_any_explicit = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
norecursedirs = ["old-project"]

[tool.coverage.run]
omit = ["src/tests/*", "src/flitzis_looper/ui/render/*"]
