[package]
name = "flitzis-looper"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "flitzis_looper_audio"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
cpal = "0.17.0"
thiserror = "2.0"
rtrb = "0.3.2"
log = "0.4.29"
env_logger = "0.11.8"
symphonia = { version = "0.5", features = ["all", "opt-simd"] }
rubato = { version = "1.0", features = ["fft_resampler"] }
audioadapter = "2.0"
audioadapter-buffers = "2.0"
stratum-dsp = "1.0.0"

[dev-dependencies]
tempfile = "3"
